--- a/SidewalkShedComplaints.qmd
+++ b/SidewalkShedComplaints.qmd
@@ -36,6 +36,8 @@ library(RSocrata)
 library(zctaCrosswalk)
 library(MASS)
 options(tigris_use_cache = TRUE)
+library(lubridate)
+
 
 ```
 
@@ -58,15 +60,15 @@ D_DOB_Complaints <- as.data.frame(DOB_Complaints)
 ```{r}
 # nrow(D_DOB_Complaints)
 D_Sidewalk_Complaints <- D_DOB_Complaints %>%
-  filter(
-    complaint_category == 23 | complaint_category == 24
-  )  
+    filter(
+        complaint_category == 23 | complaint_category == 24
+    )
 
-D_Sidewalk_Complaints_2 <- D_Sidewalk_Complaints %>% 
-  mutate(
+D_Sidewalk_Complaints_2 <- D_Sidewalk_Complaints %>%
+    mutate(
         created_date = parse_date_time(D_Sidewalk_Complaints$date_entered, orders = c("mdy", "ymd")),
         created_year = year(ymd(created_date)),
-  )
+    )
 # nrow(D_Sidewalk_Complaints)
 # head(D_Sidewalk_Complaints_2)
 ```
@@ -75,7 +77,7 @@ Save cleaned data to a local file
 
 ```{r}
 # nrow(D_Sidewalk_Complaints_2)
-write.csv(D_Sidewalk_Complaints_2, 'DOB_Shed_Complaints_0224.csv', row.names = FALSE)
+write.csv(D_Sidewalk_Complaints_2, "DOB_Shed_Complaints_0224.csv", row.names = FALSE)
 ```
 
 #### 311 homeless related requests
@@ -94,10 +96,13 @@ D_311_HL_Complaints <- as.data.frame(Homeless_Complaints)
 
 ```{r}
 D_311_Homeless_Complaints_2 <- D_311_HL_Complaints %>%
-  mutate(
-    created_year = year(ymd_hms(Created.Date)),) %>%
-  rename(created_date = Created.Date,
-         closed_date = Closed.Date)
+    mutate(
+        created_year = year(ymd_hms(Created.Date)),
+    ) %>%
+    rename(
+        created_date = Created.Date,
+        closed_date = Closed.Date
+    )
 ```
 
 ```{r}
@@ -120,11 +125,14 @@ unique(D_311_Trash_Complaints$Location.Type)
 
 ```{r}
 D_311_Sidewalk_Trash_2 <- D_311_Trash_Complaints %>%
-  filter(Location.Type == 'Sidewalk')%>%
-  mutate(
-    created_year = year(ymd_hms(Created.Date)),) %>%
-  rename(created_date = Created.Date,
-         closed_date = Closed.Date)
+    filter(Location.Type == "Sidewalk") %>%
+    mutate(
+        created_year = year(ymd_hms(Created.Date)),
+    ) %>%
+    rename(
+        created_date = Created.Date,
+        closed_date = Closed.Date
+    )
 ```
 
 ```{r}
@@ -138,8 +146,8 @@ write.csv(D_311_Sidewalk_Trash_2, "311_Sidewalk_Trash_0224.csv", row.names = FAL
 Get permits data
 
 ```{r}
-D_permits <- read.csv('NOW_Shed_Permits_3.csv')
-# head(D_permits)
+D_permits <- read.csv("All_Shed_Permits.csv")
+head(D_permits)
 ```
 
 #### Notice a mismatch between given data and my data (skip this section plz)
@@ -147,19 +155,19 @@ D_permits <- read.csv('NOW_Shed_Permits_3.csv')
 Found that total number of active sidewalk shed by year is higher than expected (much higher than 8000 shown by active map this year). So I did a concat between active map data and my processed data.
 
 ```{r}
-D_active_permits <- D_permits %>% 
-  filter(active == TRUE)
+D_active_permits <- D_permits %>%
+    filter(active == TRUE)
 nrow(D_active_permits)
 ```
 
 ```{r}
 D_active_permits <- D_active_permits %>%
-  filter(expired_date > '2024-02-26')
+    filter(expired_date > "2024-02-26")
 nrow(D_active_permits)
 ```
 
 ```{r}
-D_active_map <- read.csv('Active_Sheds0226.csv')
+D_active_map <- read.csv("Active_Sheds0226.csv")
 nrow(D_active_map)
 head(D_active_map)
 ```
@@ -178,31 +186,242 @@ difference <- anti_join(D_active_permits, D_active_map, by = "job__")
 print(difference)
 ```
 
-#### Get 2023 / 2022 data and map it by CB\>\>\>CT
+-   Map active sheds by months
 
 ```{r}
-D_permits_A <- D_permits %>% 
-  mutate(
-    Age = difftime(expired_date,created_date,units = "days")
-  ) %>%
-  filter(
-    expired_date >= '2023-06-30 00:00:00' & created_date <= '2023-01-01 00:00:00',
-    is.na(lat) == FALSE,
-    is.na(long) == FALSE,
-  ) %>%
+D_permits_1 <- D_permits %>%
+    mutate(
+        created_date = as.Date(created_date),
+        expired_date = as.Date(expired_date)
+    ) %>%
+    filter(!is.na(created_date) & !is.na(expired_date) & is.finite(created_date) & is.finite(expired_date)) %>%
+    filter(created_date <= expired_date)
+
+D_permits_1
+```
+
+```{r}
+# permit between 2019 to 2023
+data <- D_permits_1 %>%
+    filter(created_year >= 2019 | expired_year >= 2019) %>%
+    rowwise() %>%
+    mutate(months_active = list(seq(floor_date(created_date, "month"), ceiling_date(expired_date, "month"), by = "month"))) %>%
+    unnest(cols = c(months_active))
+
+data
+
+
+```
+
+```{r}
+monthly_active <- data %>%
+    group_by(months_active) %>%
+    summarise(active_sheds = n()) %>%
+    mutate(year = as.numeric(format(months_active, "%Y")))
+
+ggplot(monthly_active %>% filter(months_active >= as.Date("2019-01-01") & months_active < as.Date("2024-02-26")), aes(x = months_active, y = active_sheds)) +
+    geom_bar(stat = "identity", fill = "#ADD8E6") +
+    scale_x_date(date_breaks = "3 month", date_labels = "%Y-%m", limits = as.Date(c("2019-01-01", "2023-12-31"))) +
+    labs(
+        title = "Number of Active Sidewalk Shed Permits Per Month",
+        x = "Month",
+        y = "Number of Active Sheds"
+    ) +
+    theme_minimal() +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+    geom_vline(xintercept = as.numeric(as.Date("2023-07-01")), linetype = 4, color = "red") +
+    theme(plot.title = element_text(hjust = 0.5))
+```
+
+#### Get 2023 / 2022 data and map it by CB\>\>\>CT
+
+-   Get 2022/2023 data
+
+```{r}
+# Active in 2022
+D_permits_2022 <- data %>%
+    filter(
+        year(months_active) == 2022,
+        is.na(lat) == FALSE,
+        is.na(long) == FALSE
+    ) %>%
+    st_as_sf(coords = c("long", "lat")) %>%
+    st_set_crs(4326)
+
+# Active in 2023
+D_permits_2023 <- data %>%
+    filter(
+        year(months_active) == 2023,
+        is.na(lat) == FALSE,
+        is.na(long) == FALSE
+    ) %>%
+    st_as_sf(coords = c("long", "lat")) %>%
+    st_set_crs(4326)
+
+```
+
+-   Get ACS data by census tract
+
+```{r}
+my_counties <- c("New York County", "Bronx County", "Queens County", "Kings County", "Richmond County")
+
+D_ACS <- get_acs(
+    year = 2020,
+    geography = "tract",
+    state = "NY",
+    county = my_counties,
+    variables = c(
+        med_inc = "B19013_001",
+        white = "B02001_002",
+        black = "B02001_003",
+        poverty = "B17001_002"
+    ),
+    summary_var = "B01003_001",
+    geometry = TRUE
+) %>%
+    dplyr::select(-moe, -summary_moe) %>%
+    pivot_wider(names_from = "variable", values_from = "estimate") %>%
+    st_as_sf() %>%
+    mutate(
+        black_perc = black / summary_est,
+        pov_perc = poverty / summary_est,
+    ) %>%
+    dplyr::select(-black, -poverty) %>%
+    st_set_crs(4326)
+```
+
+-   join with acs data
+
+```{r}
+D_acs_2022 <- st_join(D_ACS, D_permits_2022, left = FALSE) %>%
+    data.frame() %>%
+    group_by(NAME) %>%
+    summarize(
+        n_2022 = n(),
+        geometry = geometry[1],
+        black_perc = black_perc[1],
+        pov_perc = pov_perc[1],
+        summary_est = summary_est[1],
+    ) %>%
+    st_as_sf() %>%
+    na.omit()
+
+D_acs_2023 <- st_join(D_ACS, D_permits_2023, left = FALSE) %>%
+    data.frame() %>%
+    group_by(NAME) %>%
+    summarize(
+        n_2023 = n(),
+        geometry = geometry[1],
+    ) %>%
+    st_as_sf() %>%
+    na.omit()
+```
+
+
+```{r}
+D_changes <- st_join(D_acs_2022, D_acs_2023, join = st_within) %>%
+    dplyr::select(-NAME.y)
+
+D_changes[is.na(D_changes)] <- 0
+
+D_changes_1 <- D_changes %>%
+    mutate(
+        diff = n_2023 - n_2022
+    )
+
+view(D_changes_1)
+```
+
+-   Get homeless complaint data
+
+```{r}
+D_311_Homeless_Complaints <- read.socrata("https://data.cityofnewyork.us/resource/sfvx-u55d.json")
+```
+
+```{r}
+D_311_Homeless_Complaints_1 <- D_311_Homeless_Complaints %>%
+    mutate(
+        created_year = year(ymd_hms(created_date)),
+    ) %>%
+    dplyr::select(created_date, unique_key, latitude, longitude, created_year, location_type) %>%
+    filter(!is.na(latitude), !is.na(longitude)) %>%
+    st_as_sf(coords = c("longitude", "latitude")) %>%
+    st_set_crs(4326)
+
+head(D_311_Homeless_Complaints_1)
+```
+
+```{r}
+D_311_Homeless_Complaints_2022 <- D_311_Homeless_Complaints_1 %>%
+    filter(created_year == 2022) %>%
+    st_join(D_changes_1, join = st_within, left = FALSE) %>%
+    data.frame() %>%
+    group_by(NAME.x) %>%
+    summarise(
+        complaints_2022 = n(),
+    )
+
+D_311_Homeless_Complaints_2023 <- D_311_Homeless_Complaints_1 %>%
+    filter(created_year == 2023) %>%
+    st_join(D_changes_1, join = st_within, left = FALSE) %>%
+    data.frame() %>%
+    group_by(NAME.x) %>%
+    summarise(
+        complaints_2023 = n(),
+    )
+
+D_Homeless_Changes <- merge(D_311_Homeless_Complaints_2022, D_311_Homeless_Complaints_2023)
+
+D_Homeless_Changes[is.na(D_Homeless_Changes)] <- 0
+
+D_Homeless_Changes <- D_Homeless_Changes %>%
+    mutate(HL_change = complaints_2023 - complaints_2022)
+
+view(D_Homeless_Changes)
+```
+
+-   merge HL data with sidewalk shed data
+
+```{r}
+D_changes_2 <- left_join(D_changes_1, D_Homeless_Changes)
+
+D_changes_2[is.na(D_changes_2)] <- 0
+
+
+```
+
+```{r}
+view(D_changes_2)
+```
+
+```{r}
+write.csv(D_changes_2, "new_one_jul_28.csv", row.names = FALSE)
+```
+
+```{r}
+# Each census tracts and the number of active shed permits between
+D_permits_A <- D_permits_1 %>%
+    mutate(
+        Age = difftime(expired_date, created_date, units = "days")
+    ) %>%
+    filter(
+        expired_date >= "2023-06-30 00:00:00" & created_date <= "2023-01-01 00:00:00",
+        is.na(lat) == FALSE,
+        is.na(long) == FALSE,
+    ) %>%
     st_as_sf(coords = c("long", "lat")) %>%
     st_set_crs(4326)
 # nrow(D_permits_A)
 
 D_permits_B <- D_permits %>%
-  mutate(
-    Age = difftime(expired_date,created_date,units = "days")
-  ) %>%
-  filter(
-    expired_date >= '2023-12-31 00:00:00' & created_date <= '2023-07-01 00:00:00',
-    is.na(lat) == FALSE,
-    is.na(long) == FALSE,
-  ) %>%
+    mutate(
+        Age = difftime(expired_date, created_date, units = "days")
+    ) %>%
+    filter(
+        expired_date >= "2023-12-31 00:00:00" & created_date <= "2023-07-01 00:00:00",
+        is.na(lat) == FALSE,
+        is.na(long) == FALSE,
+    ) %>%
     st_as_sf(coords = c("long", "lat")) %>%
     st_set_crs(4326)
 # nrow(D_permits_B)
@@ -212,29 +431,29 @@ D_permits_B <- D_permits %>%
 
 ```{r}
 D_2022_permits_B <- D_2022_permits %>%
-  data.frame() %>%
-  group_by(c_b_no) %>%
-  summarize(
-    n_2022 = n()
-  )
+    data.frame() %>%
+    group_by(c_b_no) %>%
+    summarize(
+        n_2022 = n()
+    )
 
 D_2023_permits_B <- D_2023_permits %>%
-  data.frame() %>%
-  group_by(c_b_no) %>%
-  summarize(
-    n_2023 = n()
-  )
+    data.frame() %>%
+    group_by(c_b_no) %>%
+    summarize(
+        n_2023 = n()
+    )
 ```
 
 ```{r}
 D_changes <- left_join(D_2023_permits_B, D_2022_permits_B)
-  
+
 D_changes[is.na(D_changes)] <- 0
 
 D_changes_1 <- D_changes %>%
-  mutate(
-    diff = n_2023 - n_2022
-  )
+    mutate(
+        diff = n_2023 - n_2022
+    )
 
 # D_changes_2 <- merge(D_2023_permits_B, D_2022_permits_B, by = "c_b_no", all = TRUE)
 print(D_changes_1)
@@ -245,35 +464,25 @@ print(D_changes_1)
 It is saved in "ACS_zipcode.csv". Read it from there
 
 ```{r}
-# Get Census Data
+# Get Census Data of zipcode
 my_counties <- c("New York County", "Bronx County", "Queens County", "Kings County", "Richmond County")
 
-county_fips <- c('36061','36005', '36081', '36047', '36085')
+county_fips <- c("36061", "36005", "36081", "36047", "36085")
 
 D_ACS <- get_acs(
     year = 2020,
     geography = "zcta",
-#    state = "NY",
-#    county = "New York County",  zipcode cannot search by county
+    #    state = "NY",
+    #    county = "New York County",  zipcode cannot search by county
     variables = c(
         med_inc = "B19013_001",
         white = "B02001_002",
         black = "B02001_003",
         poverty = "B17001_002",
-        tenure = "B25003_001",
-        per_tenure_size = "B25010_001",
-        med_bdr_rent = "B25031_001",
-        med_year_build = "B25035_001",
-        total_building = "B25034_001",
-        age_2014 = "B25034_002",
-        age_2010 = "B25034_003",
-        age_2000 = "B25034_004",
-        med_gross_rent = "B25064_001",
-        med_value = "B25077_001"
     ),
     summary_var = "B01003_001",
     geometry = TRUE
-    ) %>%
+) %>%
     dplyr::select(-moe, -summary_moe) %>%
     pivot_wider(names_from = "variable", values_from = "estimate") %>%
     st_as_sf() %>%
@@ -299,7 +508,8 @@ write.csv(NY_acs, "ACS_zipcode.csv", row.names = FALSE)
 Read census data by zipcode
 
 ```{r}
-NY_acs <- read.csv("ACS_zipcode.csv")
+NY_acs <- read_csv("ACS_zipcode.csv")
+head(NY_acs)
 ```
 
 Join census data with ACS data
@@ -310,11 +520,11 @@ D_acs_A <- D_permits_A %>% st_join(NY_acs, left = FALSE)
 D_acs_B <- D_permits_B %>% st_join(NY_acs, left = FALSE)
 
 D_census_tract_A <- D_acs_A %>%
-  data.frame() %>%
-  group_by(NAME) %>%
-  summarize(
-    n_A = n(),
-    geometry = geometry[1],
+    data.frame() %>%
+    group_by(NAME) %>%
+    summarize(
+        n_A = n(),
+        geometry = geometry[1],
         max_age_A = max(Age),
         total_age_A = sum(Age),
         avg_age_A = total_age_A / n_A,
@@ -330,35 +540,38 @@ D_census_tract_A <- D_acs_A %>%
         med_year_build = med_year_build[1],
         med_gross_rent = med_gross_rent[1],
         med_value = med_value[1],
-  ) %>% st_as_sf() %>%
+    ) %>%
+    st_as_sf() %>%
     na.omit()
 
 # D_2022_census_tract$n_2022 <- ifelse(is.na(D_2022_census_tract$n_2022), 0, D_2022_census_tract$n_2022)
 # D_2022_census_tract <- mutate_all(D_2022_census_tract, ~ifelse(is.na(.), 0, .))
 
 D_census_tract_B <- D_acs_B %>%
-  data.frame() %>%
-  group_by(NAME) %>%
-  summarize(
-    n_B = n(),
-    max_age_B = max(Age),
+    data.frame() %>%
+    group_by(NAME) %>%
+    summarize(
+        n_B = n(),
+        max_age_B = max(Age),
         total_age_B = sum(Age),
         avg_age_B = total_age_B / n_B,
-    geometry = geometry[1],
-  ) %>% st_as_sf() %>%
+        geometry = geometry[1],
+    ) %>%
+    st_as_sf() %>%
     na.omit()
 
 
 # join group A and B permit data from different time
-D_changes_ct <- st_join(D_census_tract_B, D_census_tract_A) 
+D_changes_ct <- st_join(D_census_tract_B, D_census_tract_A)
 D_changes_ct$n_A <- ifelse(is.na(D_changes_ct$n_A), 0, D_changes_ct$n_A)
 D_changes_ct$n_B <- ifelse(is.na(D_changes_ct$n_B), 0, D_changes_ct$n_B)
 
 D_changes_ct_2 <- D_changes_ct %>%
-  mutate(
-    shed_change = n_B - n_A,
-    zip_code = as.integer(substr(NAME.x, nchar(NAME.x) - 4, nchar(NAME.x)))
-  ) %>% dplyr::select(-NAME.y, -NAME.x)
+    mutate(
+        shed_change = n_B - n_A,
+        zip_code = as.integer(substr(NAME.x, nchar(NAME.x) - 4, nchar(NAME.x)))
+    ) %>%
+    dplyr::select(-NAME.y, -NAME.x)
 
 # print(D_changes_ct_2)
 ```
@@ -370,28 +583,28 @@ D_changes_ct_2 <- D_changes_ct %>%
     used zipcode
 
 ```{r}
-D_Sidewalk_Complaints_2 <- read.csv('DOB_Shed_Complaints_0224.csv')
+D_Sidewalk_Complaints_2 <- read.csv("DOB_Shed_Complaints_0224.csv")
 
 D_Sidewalk_Complaints_A <- D_Sidewalk_Complaints_2 %>%
-  filter(created_date >= '2023-01-01' & created_date <= '2023-06-30' & is.na(zip_code) == FALSE & zip_code != '') %>% 
-  group_by(zip_code) %>%
-  summarize(
-    SC_a = n()
-  )
+    filter(created_date >= "2023-01-01" & created_date <= "2023-06-30" & is.na(zip_code) == FALSE & zip_code != "") %>%
+    group_by(zip_code) %>%
+    summarize(
+        SC_a = n()
+    )
 
 D_Sidewalk_Complaints_B <- D_Sidewalk_Complaints_2 %>%
-  filter(created_date >= '2023-07-01' & created_date <= '2023-12-31' & is.na(zip_code) == FALSE & zip_code != '') %>% 
-  group_by(zip_code) %>%
-  summarize(
-    SC_b = n()
-  )
+    filter(created_date >= "2023-07-01" & created_date <= "2023-12-31" & is.na(zip_code) == FALSE & zip_code != "") %>%
+    group_by(zip_code) %>%
+    summarize(
+        SC_b = n()
+    )
 
-D_SC_changes <- merge(D_Sidewalk_Complaints_A, D_Sidewalk_Complaints_B) 
+D_SC_changes <- merge(D_Sidewalk_Complaints_A, D_Sidewalk_Complaints_B)
 
 D_SC_changes[is.na(D_SC_changes)] <- 0
 
-D_SC_changes <- D_SC_changes %>% 
-  mutate(SC_change = SC_a - SC_b)
+D_SC_changes <- D_SC_changes %>%
+    mutate(SC_change = SC_a - SC_b)
 
 D_changes_ct_3 <- left_join(D_changes_ct_2, D_SC_changes, by = "zip_code")
 
@@ -401,27 +614,28 @@ D_changes_ct_3$SC_change[is.na(D_changes_ct_3$SC_change)] <- 0
 2.  Homeless complaints data
 
 ```{r}
+D_311_Homeless_Complaints_2 <- read.csv("311_Homeless_Complaints_0224.csv")
 D_311_Homeless_Complaints_A <- D_311_Homeless_Complaints_2 %>%
-  filter(created_date >= '2023-01-01' & created_date <= '2023-06-30' & is.na(Incident.Zip) == FALSE & Incident.Zip != '') %>%
-  group_by(Incident.Zip) %>% 
-  summarize(
-    HL_a = n()
-  )
+    filter(created_date >= "2023-01-01" & created_date <= "2023-06-30" & is.na(Incident.Zip) == FALSE & Incident.Zip != "") %>%
+    group_by(Incident.Zip) %>%
+    summarize(
+        HL_a = n()
+    )
 
 D_311_Homeless_Complaints_B <- D_311_Homeless_Complaints_2 %>%
-  filter(created_date >= '2023-07-01' & created_date <= '2023-12-31' & is.na(Incident.Zip) == FALSE & Incident.Zip != '') %>%
-  group_by(Incident.Zip) %>% 
-  summarize(
-    HL_b = n()
-  )
+    filter(created_date >= "2023-07-01" & created_date <= "2023-12-31" & is.na(Incident.Zip) == FALSE & Incident.Zip != "") %>%
+    group_by(Incident.Zip) %>%
+    summarize(
+        HL_b = n()
+    )
 
 D_Homeless_Changes <- merge(D_311_Homeless_Complaints_A, D_311_Homeless_Complaints_B)
 
 D_Homeless_Changes[is.na(D_Homeless_Changes)] <- 0
 
-D_Homeless_Changes <- D_Homeless_Changes %>% 
-  mutate(HL_change = HL_a - HL_b) %>%
-  rename(zip_code = Incident.Zip)
+D_Homeless_Changes <- D_Homeless_Changes %>%
+    mutate(HL_change = HL_a - HL_b) %>%
+    rename(zip_code = Incident.Zip)
 
 # print(D_Homeless_Changes)
 D_changes_ct_4 <- left_join(D_changes_ct_3, D_Homeless_Changes, by = "zip_code")
@@ -432,26 +646,27 @@ D_changes_ct_4$HL_change[is.na(D_changes_ct_4$HL_change)] <- 0
 3.  311 trash data
 
 ```{r}
+D_311_Sidewalk_Trash_2 <- read.csv("311_Sidewalk_Trash_0224.csv")
 D_311_Sidewalk_Trash_A <- D_311_Sidewalk_Trash_2 %>%
-  filter(created_date >= '2023-01-01' & created_date <= '2023-06-30' & is.na(Incident.Zip) == FALSE & Incident.Zip != '') %>%
-  group_by(Incident.Zip) %>% 
-  summarize(
-    TH_a = n()
-  )
+    filter(created_date >= "2023-01-01" & created_date <= "2023-06-30" & is.na(Incident.Zip) == FALSE & Incident.Zip != "") %>%
+    group_by(Incident.Zip) %>%
+    summarize(
+        TH_a = n()
+    )
 
 D_311_Sidewalk_Trash_B <- D_311_Sidewalk_Trash_2 %>%
-  filter(created_date >= '2023-07-01' & created_date <= '2023-12-31' & is.na(Incident.Zip) == FALSE & Incident.Zip != '') %>%
-  group_by(Incident.Zip) %>% 
-  summarize(
-    TH_b = n()
-  )
-D_Trash_Changes <- merge(D_311_Sidewalk_Trash_A, D_311_Sidewalk_Trash_B) 
+    filter(created_date >= "2023-07-01" & created_date <= "2023-12-31" & is.na(Incident.Zip) == FALSE & Incident.Zip != "") %>%
+    group_by(Incident.Zip) %>%
+    summarize(
+        TH_b = n()
+    )
+D_Trash_Changes <- merge(D_311_Sidewalk_Trash_A, D_311_Sidewalk_Trash_B)
 
 D_Trash_Changes[is.na(D_Trash_Changes)] <- 0
 
-D_Trash_Changes <- D_Trash_Changes %>% 
-  mutate(TH_change = TH_a - TH_b) %>%
-  rename(zip_code = Incident.Zip)
+D_Trash_Changes <- D_Trash_Changes %>%
+    mutate(TH_change = TH_a - TH_b) %>%
+    rename(zip_code = Incident.Zip)
 
 D_changes_ct_5 <- left_join(D_changes_ct_4, D_Trash_Changes, by = "zip_code")
 
@@ -471,11 +686,105 @@ library(mgcViz)
 
 ```{r}
 D_changes_ct_5 <- D_changes_ct_5 %>% mutate(
-  max_age_B = as.numeric(max_age_B),
-  avg_age_B = as.numeric(avg_age_B)
+    max_age_B = as.numeric(max_age_B),
+    avg_age_B = as.numeric(avg_age_B)
 )
 # print(D_changes_ct_5)
 
+```
+
+#### Jul 28 Version:
+
+```{r}
+mod_HL_P <- gam(complaints_2023 ~ s(n_2023) + s(black_perc) + s(pov_perc),
+    family = poisson, data = D_changes_2
+)
+
+summary(mod_HL_P)
+```
+
+```{r}
+res_p <- simulateResiduals(mod_HL_P)
+plot(res_p, smoothScatter = F, cex = .3)
+testResiduals(res_p)
+```
+
+```{r}
+mod_HL_P <- gam(complaints_2023 ~ s(n_2023) + s(black_perc) + s(pov_perc),
+    family = poisson, data = D_changes_M
+)
+
+summary(mod_HL_P)
+```
+
+```{r}
+res_p <- simulateResiduals(mod_HL_P)
+plot(res_p, smoothScatter = F, cex = .3)
+testResiduals(res_p)
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(mod_HL_P, shift = coef(mod_HL_gam)[1])
+```
+
+-   negative binomial
+
+```{r}
+mod_HL_nb <- glm.nb(complaints_2023 ~ n_2023 + black_perc,
+    data = D_changes_2
+)
+
+summary(mod_HL_nb)
+```
+
+```{r}
+mod_HL_nb <- glm.nb(complaints_2023 ~ n_2023 + black_perc + pov_perc,
+    data = D_changes_M
+)
+
+summary(mod_HL_nb)
+```
+
+```{r}
+res_p <- simulateResiduals(mod_HL_nb)
+plot(res_p, smoothScatter = F, cex = .3)
+testResiduals(res_p)
+```
+
+-   Gamma: scale down to positives / manhattan
+
+```{r}
+D_changes_M <- D_changes_2 %>%
+    filter(stringr::str_detect(NAME.x, "New York County"))
+
+D_changes_M_positive <- D_changes_M %>% filter(complaints_2022 > 0)
+```
+
+```{r}
+D_changes_positive <- D_changes_2 %>%
+    filter(complaints_2022 > 0)
+```
+
+```{r}
+
+mod_HL_gam <- gam(complaints_2022 ~ s(n_2022),
+    Gamma(link = "log"),
+    data = D_changes_M_positive
+)
+
+summary(mod_HL_gam)
+```
+
+```{r}
+res_p <- simulateResiduals(mod_HL_gam)
+plot(res_p, smoothScatter = F, cex = .3)
+testResiduals(res_p)
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(mod_HL_gam, trans = exp, shift = coef(mod_HL_gam)[1]) + scale_y_continuous(limits = c(0, 1500))
 ```
 
 #### Mar 7 Version: Get changes in the highest
@@ -487,81 +796,100 @@ print(D_changes_ct_5)
 #### Mar 6 Version
 
 ```{r}
-# homeless
-mod_HL_gamma <- gam(HL_b ~ s(n_B) + s(black_perc) + s(summary_est), 
-                     family = Gamma(link = "log"), data = D_changes_ct_5)
-
+mod_HL_gamma <- gam(HL_b ~ s(n_B) + s(black_perc) + s(summary_est),
+    family = Gamma(link = "log"), data = D_changes_ct_5
+)
 summary(mod_HL_gamma)
 ```
 
 ```{r}
 gam.check(mod_HL_gamma)
-HL_res<-simulateResiduals(mod_HL_gamma)
+HL_res <- simulateResiduals(mod_HL_gamma)
 plot(HL_res)
 ```
 
 ```{r}
+par(mfrow = c(2, 2))
+plot(mod_HL_gamma, trans = exp, shift = coef(mod_HL_gamma)[1])
+```
+
+```{r}
 # scaffolding complaints
-mod_SC_gamma <- gam(SC_b ~ s(n_B) + s(black_perc) + s(summary_est) + s(max_age_B), 
-                     family = Gamma(link = "log"), data = D_changes_ct_5)
+mod_SC_gamma <- gam(SC_b ~ s(n_B) + s(black_perc) + s(summary_est) + s(max_age_B),
+    family = Gamma(link = "log"), data = D_changes_ct_5
+)
 
 summary(mod_SC_gamma)
 ```
 
 ```{r}
 gam.check(mod_SC_gamma)
-SC_res<-simulateResiduals(mod_SC_gamma)
+SC_res <- simulateResiduals(mod_SC_gamma)
 plot(SC_res)
 ```
 
 ```{r}
+par(mfrow = c(2, 2))
+plot(mod_SC_gamma, trans = exp, shift = coef(mod_SC_gamma)[1])
+```
+
+```{r}
 # Street Trash complaints
-mod_TH_gamma <- gam(TH_b ~ s(n_B) + s(black_perc) + s(summary_est), 
-                     family = Gamma(link = "log"), data = D_changes_ct_5)
+mod_TH_gamma <- gam(TH_b ~ s(n_B) + s(black_perc) + s(summary_est),
+    family = Gamma(link = "log"), data = D_changes_ct_5
+)
 
 summary(mod_TH_gamma)
+
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(mod_TH_gamma, trans = exp, shift = coef(mod_TH_gamma)[1])
 ```
 
 ```{r}
 gam.check(mod_TH_gamma)
-TH_res<-simulateResiduals(mod_TH_gamma)
+TH_res <- simulateResiduals(mod_TH_gamma)
 plot(TH_res)
 ```
 
 #### Mar 1 Version
 
 ```{r}
-mod_now_gamma <- gam(n_B ~ max_age_B + s(HL_b) + s(SC_b) + s(TH_b) + black_perc + summary_est, 
-           family = Gamma(link = "log"), data = D_changes_ct_5)
+mod_now_gamma <- gam(n_B ~ max_age_B + s(HL_b) + s(SC_b) + s(TH_b) + black_perc + summary_est,
+    family = Gamma(link = "log"), data = D_changes_ct_5
+)
 
 summary(mod_now_gamma)
 ```
 
 ```{r}
-par(mfrow=c(2,3))
+par(mfrow = c(2, 3))
 plot(mod_now_gamma, trans = inv.logit, shift = coef(mod)[1])
 ```
 
 ```{r}
 gam.check(mod_now_gamma)
-res_shed<-simulateResiduals(mod_now_gamma)
+res_shed <- simulateResiduals(mod_now_gamma)
 plot(res_shed)
-#testResiduals(res_shed)
-#plotResiduals(res_shed, form = D_data_model_balt_all_f$Ten.Year.Age.Groups) 
+# testResiduals(res_shed)
+# plotResiduals(res_shed, form = D_data_model_balt_all_f$Ten.Year.Age.Groups)
 ```
 
 2.  Poisson: model looks okay. But DHARMa residuals are not uniform
 
 ```{r}
 mod_shed_poisson <- glm(n_B ~ max_age_B + HL_b + SC_b + TH_b + black_perc + summary_est,
-               family = poisson, data = D_changes_ct_5)
+    family = poisson, data = D_changes_ct_5
+)
 
 summary(mod_shed_poisson)
 ```
 
 ```{r}
-res_p<-simulateResiduals(mod_shed_poisson)
-plot(res_p, smoothScatter=F, cex = .3)
+res_p <- simulateResiduals(mod_shed_poisson)
+plot(res_p, smoothScatter = F, cex = .3)
 testResiduals(res_p)
 ```
 
@@ -570,20 +898,23 @@ testResiduals(res_p)
 ```{r}
 # library(MASS)
 mod_shed_nb <- glm.nb(n_B ~ max_age_B + HL_b + SC_b + TH_b + black_perc + summary_est,
-               data = D_changes_ct_5)
+    data = D_changes_ct_5
+)
 
 summary(mod_shed_nb)
 ```
 
 ```{r}
-res_p<-simulateResiduals(mod_shed_nb)
-plot(res_p, smoothScatter=F, cex = .3)
+res_p <- simulateResiduals(mod_shed_nb)
+plot(res_p, smoothScatter = F, cex = .3)
 testResiduals(res_p)
 ```
 
 ```{r}
-mod_shed_A_p <- gam(n_A ~ max_age_A + s(HL_a) + s(SC_a) + s(TH_a) + black_perc + summary_est, method = "REML",
-               family = poisson, data = D_changes_ct_5)
+mod_shed_A_p <- gam(n_A ~ max_age_A + s(HL_a) + s(SC_a) + s(TH_a) + black_perc + summary_est,
+    method = "REML",
+    family = poisson, data = D_changes_ct_5
+)
 
 summary(mod_shed_A_p)
 ```
@@ -596,19 +927,20 @@ Didn't work quite well either.
 
 ```{r}
 D_changes_hl <- D_changes_ct_5 %>% mutate(
-  increased = HL_change > 2
+    increased = HL_change > 2
 )
 ```
 
 ```{r}
-mod_change_log <- glm(increased ~ max_age_B + shed_change +black_perc + summary_est, 
-             family = "binomial", data = D_changes_hl)
+mod_change_log <- glm(increased ~ max_age_B + shed_change + black_perc + summary_est,
+    family = "binomial", data = D_changes_hl
+)
 
 summary(mod_change_log)
 ```
 
 ```{r}
-par(mfrow= c(2,2))
+par(mfrow = c(2, 2))
 plot(mod_change_log)
 ```
 
@@ -616,18 +948,19 @@ plot(mod_change_log)
 
 ```{r}
 mod_change_br <- gam(SC_change ~ s(shed_change) + s(black_perc) + summary_est + s(max_age_B),
-               family = betar(), data = D_changes_hl)
+    family = betar(), data = D_changes_hl
+)
 
 summary(mod_change_br)
 ```
 
 ```{r}
-mod_res<-simulateResiduals(mod_change_br)
+mod_res <- simulateResiduals(mod_change_br)
 plot(mod_res)
-#testResiduals(mod_res)
-#plotResiduals(mod_res, form = mod)
+# testResiduals(mod_res)
+# plotResiduals(mod_res, form = mod)
 
-#new diagnostic plot 
+# new diagnostic plot
 gam.check(mod_change_br)
 ```
 
@@ -635,10 +968,11 @@ gam.check(mod_change_br)
 
 ```{r}
 mod_change_l <- lm(shed_change ~ HL_change + SC_change + TH_change + black_perc + summary_est + avg_age_B,
-               data = D_changes_ct_5)
+    data = D_changes_ct_5
+)
 
 summary(mod_change_l)
-par(mfrow=c(2,2))
+par(mfrow = c(2, 2))
 plot(mod_change_l)
 ```
 
@@ -654,46 +988,54 @@ print(D_changes_ct_5)
 
 ```{r}
 library(ggplot2)
-  
-D_hl_b <- D_changes_ct_5 %>% filter(
-  n_B <300,
-  HL_b<1500
-) %>%  dplyr::select(n_B, HL_b, zip_code, max_age_B) %>%
-  mutate(aged = max_age_B > 1500)
 
-ggplot(D_hl_b, aes(x=n_B, y=HL_b, color = aged)) + geom_point(size = 0.7) + 
-  geom_smooth(method="lm", se = FALSE, color = "#619CFF", linetype="dashed", alpha=0.5) +
-  labs(
-    title = "Zip codes with more active sidewalk sheds receive more homeless complaints",
-    subtitle = "(July 2023 - Dec 2023)",
-    x = "# of active sidewalk sheds (permits)",
-    y = "# of 311 homeless complaints",
-    color = "With shed > 1500 days",
-    caption = "Data from DOB NOW sidewalk shed permit issuance and NYC 311 complaints"
-  ) + scale_color_manual(values = c("TRUE" = "#F8766D", "FALSE" = "#00BA38")) + 
-  theme_light() +
-  theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
+D_hl_b <- D_changes_ct_5 %>%
+    filter(
+        n_B < 300,
+        HL_b < 1500
+    ) %>%
+    dplyr::select(n_B, HL_b, zip_code, max_age_B) %>%
+    mutate(aged = max_age_B > 1500)
+
+ggplot(D_hl_b, aes(x = n_B, y = HL_b, color = aged)) +
+    geom_point(size = 0.7) +
+    geom_smooth(method = "lm", se = FALSE, color = "#619CFF", linetype = "dashed", alpha = 0.5) +
+    labs(
+        title = "Zip codes with more active sidewalk sheds receive more homeless complaints",
+        subtitle = "(July 2023 - Dec 2023)",
+        x = "# of active sidewalk sheds (permits)",
+        y = "# of 311 homeless complaints",
+        color = "With shed > 1500 days",
+        caption = "Data from DOB NOW sidewalk shed permit issuance and NYC 311 complaints"
+    ) +
+    scale_color_manual(values = c("TRUE" = "#F8766D", "FALSE" = "#00BA38")) +
+    theme_light() +
+    theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
 ```
 
 ```{r}
-D_sc_b <- D_changes_ct_5 %>% filter(
-  n_B <300,
-  SC_b<1500
-) %>% dplyr::select(n_B, SC_b, zip_code, max_age_B) %>%
-  mutate(aged = max_age_B > 1500)
+D_sc_b <- D_changes_ct_5 %>%
+    filter(
+        n_B < 300,
+        SC_b < 1500
+    ) %>%
+    dplyr::select(n_B, SC_b, zip_code, max_age_B) %>%
+    mutate(aged = max_age_B > 1500)
 
-ggplot(D_sc_b, aes(x=n_B, y=SC_b, color = aged)) + geom_point(size = 0.7) + 
-  geom_smooth(method="lm", se = FALSE, color = "#619CFF", linetype="dashed", alpha=0.5) +
-  labs(
-    title = "Zip codes with more active sidewalk sheds induce more homeless complaints",
-    subtitle = "(July 2023 - Dec 2023)",
-    x = "# of active sidewalk sheds (permits)",
-    y = "# of 311 homeless complaints",
-    color = "With shed > 1500 days",
-    caption = "Data from DOB NOW sidewalk shed permit issuance and NYC 311 complaints"
-  ) + scale_color_manual(values = c("TRUE" = "#F8766D", "FALSE" = "#00BA38")) + 
-  theme_light() +
-  theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
+ggplot(D_sc_b, aes(x = n_B, y = SC_b, color = aged)) +
+    geom_point(size = 0.7) +
+    geom_smooth(method = "lm", se = FALSE, color = "#619CFF", linetype = "dashed", alpha = 0.5) +
+    labs(
+        title = "Zip codes with more active sidewalk sheds induce more homeless complaints",
+        subtitle = "(July 2023 - Dec 2023)",
+        x = "# of active sidewalk sheds (permits)",
+        y = "# of 311 homeless complaints",
+        color = "With shed > 1500 days",
+        caption = "Data from DOB NOW sidewalk shed permit issuance and NYC 311 complaints"
+    ) +
+    scale_color_manual(values = c("TRUE" = "#F8766D", "FALSE" = "#00BA38")) +
+    theme_light() +
+    theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
 ```
 
 2.  Time changes of zipcode 10036
@@ -705,23 +1047,30 @@ print(D_permits)
 3.  Expiration Vs. New
 
 ```{r}
-D_permits_ex <- D_permits %>% filter(
-  expired_year == 2023,
-) %>% group_by(expired_month) %>%
-  summarize(
-    n_ = n()
-  ) %>% rename(month = expired_month) %>%
-  mutate(group = "expired")
+D_permits_ex <- D_permits %>%
+    filter(
+        expired_year == 2023,
+    ) %>%
+    group_by(expired_month) %>%
+    summarize(
+        n_ = n()
+    ) %>%
+    rename(month = expired_month) %>%
+    mutate(group = "expired")
 
-D_permits_new <- D_permits %>% filter(
-  created_year == 2023,
-) %>% mutate(
-  created_month = month(created_date)
-) %>% group_by(created_month) %>%
-  summarize(
-    n_ = n()
-  ) %>% rename(month = created_month) %>%
-  mutate(group = "created")
+D_permits_new <- D_permits %>%
+    filter(
+        created_year == 2023,
+    ) %>%
+    mutate(
+        created_month = month(created_date)
+    ) %>%
+    group_by(created_month) %>%
+    summarize(
+        n_ = n()
+    ) %>%
+    rename(month = created_month) %>%
+    mutate(group = "created")
 
 combined <- rbind(D_permits_ex, D_permits_new)
 print(combined)
@@ -730,41 +1079,54 @@ print(combined)
 ```{r}
 # Create a line chart using ggplot2
 ggplot(combined, aes(x = month, y = n_, color = factor(group))) +
-  geom_line() +
-  labs(title = "# of New Versus Expired Sidewalk Shed Permit in 2023",
-       x = "Month",
-       y = "# of sidewalk shed",
-       color = "Group") + scale_x_continuous(breaks = 1:12)+
-  theme_minimal() + 
-  theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
+    geom_line() +
+    labs(
+        title = "# of New Versus Expired Sidewalk Shed Permit in 2023",
+        x = "Month",
+        y = "# of sidewalk shed",
+        color = "Group"
+    ) +
+    scale_x_continuous(breaks = 1:12) +
+    theme_minimal() +
+    theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
 ```
 
 ```{r}
-ggplot(data = D_permits_ex, aes(x=expired_month, y=n_expired)) +geom_line()+
-  geom_point()
+ggplot(data = D_permits_ex, aes(x = expired_month, y = n_expired)) +
+    geom_line() +
+    geom_point()
 ```
 
 4.  Midtown Manhattan doubling down
 
 ```{r}
-D_midtown_ex <- D_permits %>% filter(borough == "MANHATTAN" & c_b_no == 105 & expired_year == 2023) %>%
-  group_by(expired_month) %>%
-  summarize(n_ = n()) %>% rename(month = expired_month) %>%
-  mutate(group = "Midtown Expired Permits")
+D_midtown_ex <- D_permits %>%
+    filter(borough == "MANHATTAN" & c_b_no == 105 & expired_year == 2023) %>%
+    group_by(expired_month) %>%
+    summarize(n_ = n()) %>%
+    rename(month = expired_month) %>%
+    mutate(group = "Midtown Expired Permits")
 
-D_midtown_ne <- D_permits %>% filter(borough == "MANHATTAN" & c_b_no == 105 & created_year == 2023) %>% mutate(
-  created_month = month(created_date)) %>%
-  group_by(created_month) %>%
-  summarize(n_ = n()) %>% rename(month = created_month) %>%
-  mutate(group = "Midtown New Permits")
+D_midtown_ne <- D_permits %>%
+    filter(borough == "MANHATTAN" & c_b_no == 105 & created_year == 2023) %>%
+    mutate(
+        created_month = month(created_date)
+    ) %>%
+    group_by(created_month) %>%
+    summarize(n_ = n()) %>%
+    rename(month = created_month) %>%
+    mutate(group = "Midtown New Permits")
 
-D_permits_ex <- D_permits %>% filter(
-  expired_year == 2023,
-) %>% group_by(expired_month) %>%
-  summarize(
-    n_ = n()
-  ) %>% rename(month = expired_month) %>%
-  mutate(group = "NYC")
+D_permits_ex <- D_permits %>%
+    filter(
+        expired_year == 2023,
+    ) %>%
+    group_by(expired_month) %>%
+    summarize(
+        n_ = n()
+    ) %>%
+    rename(month = expired_month) %>%
+    mutate(group = "NYC")
 
 combined_2 <- rbind(D_midtown_ex, D_midtown_ne)
 
@@ -773,13 +1135,16 @@ combined_2 <- rbind(D_midtown_ex, D_midtown_ne)
 ```{r}
 # Create a line chart using ggplot2
 ggplot(combined_2, aes(x = month, y = n_, color = factor(group))) +
-  geom_line() +
-  labs(title = "# of Expired Sidewalk Shed Permit in 2023 Midtown Manhattan",
-       x = "Month",
-       y = "# of sidewalk shed",
-       color = "Group") + scale_x_continuous(breaks = 1:12)+
-  theme_minimal() + 
-  theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
+    geom_line() +
+    labs(
+        title = "# of Expired Sidewalk Shed Permit in 2023 Midtown Manhattan",
+        x = "Month",
+        y = "# of sidewalk shed",
+        color = "Group"
+    ) +
+    scale_x_continuous(breaks = 1:12) +
+    theme_minimal() +
+    theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
 ```
 
 5.  Mapping of zipcode complaints data
@@ -807,8 +1172,8 @@ merged <- st_join(gdf_m, D_changes_ct_5, left = TRUE)
 #        na.value = "gray",
 #        guide = "legend",
 #        breaks = seq(min(merged$HL_b, na.rm = TRUE), max(merged$HL_b, na.rm = TRUE), length.out = 5)
-      
-                      #   breaks = my_breaks, labels = my_breaks
+
+#   breaks = my_breaks, labels = my_breaks
 #    labs(title = "311 Homeless Complaints by Zipcode")+ theme_light() +
 #  theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
 
@@ -817,16 +1182,20 @@ ggplot() +
     scale_fill_gradient(
         name = "Active Sidewalk Sheds",
         low = "white", high = "red",
-        na.value = "gray")+
-#        guide = "legend",
-#        breaks = seq(min(merged$HL_b, na.rm = TRUE), max(merged$HL_b, na.rm = TRUE), length.out = 5)
-      
-                      #   breaks = my_breaks, labels = my_breaks
-    labs(title = "# of Active Sidewalk Shed by Zip-code",
-         caption = "July 2023 - Dec 2023",
-         legend = "Sidewalk Shed") + scale_x_continuous(breaks = seq(-73.95955, -73.90717, n = 5))
-  theme_minimal() +
-  theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
+        na.value = "gray"
+    ) +
+    #        guide = "legend",
+    #        breaks = seq(min(merged$HL_b, na.rm = TRUE), max(merged$HL_b, na.rm = TRUE), length.out = 5)
+
+    #   breaks = my_breaks, labels = my_breaks
+    labs(
+        title = "# of Active Sidewalk Shed by Zip-code",
+        caption = "July 2023 - Dec 2023",
+        legend = "Sidewalk Shed"
+    ) +
+    scale_x_continuous(breaks = seq(-73.95955, -73.90717, n = 5))
+theme_minimal() +
+    theme(text = element_text(family = "Arial", size = 11), legend.text = element_text(size = 8))
 ```
 
 ```{r}
